Replace Collectors#toList with Stream#toList (#788)